进一步重构note_handler和note_service，为利用反射自动构建Handler做准备
