# controller/restAPI/handler/note/note_handler.go
@@ -3,43 +3,23 @@ package note
 import (
 	"github.com/ccchieh/ginHelper"
 	"github.com/ccchieh/gospree/controller/restAPI/middleware"
-	"github.com/ccchieh/gospree/core"
-	"github.com/ccchieh/gospree/model"
 	"github.com/ccchieh/gospree/service"
-	"github.com/ccchieh/gospree/util/ret"
 	"github.com/gin-gonic/gin"
-	"net/http"
+	"reflect"
 )
 
 // @Tags Note
 // @Summary 新建Note
-// @Param note body service.CreateNoteParams true "Note"
+// @Param note body service.CreateNote true "Note"
 // @Success 200
 // @Failure 400
 // @Router /note [post]
 // @version 1.0
 func (h *Helper) CreateNoteHandler() (r *ginHelper.Router) {
-
 	handler := func(c *gin.Context) {
-		params := new(service.CreateNoteParams)
-		if err := c.ShouldBind(params); err != nil {
-			core.Log.Info(err)
-			ret.Result(c, http.StatusBadRequest, nil, core.ErrParameterMatch)
-			return
-		}
-		value, exists := c.Get("user")
-		if !exists {
-			ret.Result(c, http.StatusBadRequest, nil, core.ErrPermission)
-			return
-		}
-		user := value.(*model.User)
-		params.ID = user.ID
-		note, err := service.CreateNoteService(params)
-		if err != nil {
-			ret.Result(c, http.StatusBadRequest, nil, err)
-			return
-		}
-		ret.Result(c, http.StatusOK, gin.H{"noteID": note.ID}, nil)
+		params := new(service.CreateNote)
+		params.ID = service.GetID(c)
+		service.Process(c, params)
 	}
 
 	return &ginHelper.Router{
@@ -60,20 +40,13 @@ func (h *Helper) CreateNoteHandler() (r *ginHelper.Router) {
 // @version 1.0
 func (h *Helper) GetNoteHandler() (r *ginHelper.Router) {
 
-	handler := func(c *gin.Context) {
-		params := new(service.GetNoteParams)
-		if err := c.ShouldBind(params); err != nil {
-			core.Log.Info(err)
-			ret.Result(c, http.StatusBadRequest, nil, core.ErrParameterMatch)
-			return
-		}
+	// 取变量a的反射类型对象
+	paramsType := reflect.TypeOf(service.GetNote{})
+	// 根据反射类型对象创建类型实例
 
-		note, err := service.GetNoteService(params)
-		if err != nil {
-			ret.Result(c, http.StatusBadRequest, nil, err)
-			return
-		}
-		ret.Result(c, http.StatusOK, gin.H{"preView": note.PreView, "content": note.Content}, nil)
+	handler := func(c *gin.Context) {
+		params := reflect.New(paramsType).Interface().(service.Params)
+		service.Process(c, params)
 	}
 
 	return &ginHelper.Router{
@@ -91,22 +64,10 @@ func (h *Helper) GetNoteHandler() (r *ginHelper.Router) {
 // @Failure 400
 // @Router /note/list [get]
 // @version 1.0
-func (h *Helper) GetNoteIDListHandles() (r *ginHelper.Router) {
-
+func (h *Helper) GetNoteListHandles() (r *ginHelper.Router) {
 	handler := func(c *gin.Context) {
-		params := new(service.GetNoteIDListParams)
-		if err := c.ShouldBind(params); err != nil {
-			core.Log.Info(err)
-			ret.Result(c, http.StatusBadRequest, nil, core.ErrParameterMatch)
-			return
-		}
-
-		noteIDs, err := service.GetNoteIDListService(params)
-		if err != nil {
-			ret.Result(c, http.StatusBadRequest, nil, err)
-			return
-		}
-		ret.Result(c, http.StatusOK, gin.H{"noteIDList": noteIDs}, nil)
+		params := new(service.GetNoteList)
+		service.Process(c, params)
 	}
 
 	return &ginHelper.Router{
